--- a/NJLive/web/challenge/score.xhtml
+++ b/NJLive/web/challenge/score.xhtml
@@ -27,7 +27,7 @@
                             <p:column headerText="#" width="5%" styleClass="text-center" >
                                 #{indexKey + 1}
                             </p:column>
-                            <p:column headerText="Team" width="25%" styleClass="text-center" >
+                            <p:column headerText="Equipo" width="25%" styleClass="text-center" >
                                 <h:outputText value="#{p.team.nameTeam}" />
                             </p:column>
 
