--- a/NJLive/web/challenge/select.xhtml
+++ b/NJLive/web/challenge/select.xhtml
@@ -31,7 +31,7 @@
                     <div id="box-float" class="mainbox col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3"> 
                         <div class="panel panel-default" >
                             <div class="panel-heading">
-                                <div class="panel-title text-center"> Welcome To Nago Judge </div>
+                                <div class="panel-title text-center"> Bienvenido a NagoJudge </div>
                             </div>
                             <div class="panel-body" >
 
@@ -55,7 +55,7 @@
                                                              style="width:100%;"
                                                              converter="challengeMessageConvertJSF"
                                                              required="true">
-                                                <f:selectItem value="#{null}" itemLabel="Select one challenge" />
+                                                <f:selectItem value="#{null}" itemLabel="Seleccione una competencia" />
                                                 <f:selectItems var="item"
                                                                value="#{selectRoomBean.challengeMessageItems}" />
                                             </p:selectOneMenu>
